# create-python-cmd

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  UPDATE.md  activate  activate.sh  clean  install  install.py  lint  lint.bat  pyproject.toml  requirements.testing.txt  setup.py  test  tox.ini
.github/workflows/: push_macos.yml  push_ubuntu.yml  push_win.yml
src/create_python_cmd/: cli.py  createapp.py
src/createpythonapp/: cli.py  createapp.py
src/createpythonapp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py  test_createapp.py
