[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "create-python-cmd"
description = "Cross platform(ish) productivity commands written in python."
requires-python = ">=3.7"
readme = "README.md"
keywords = ["create python cmd"]
license = { text = "BSD 3-Clause License" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = []
# Change this with the version number bump.
# Also make the change in zcmds/version.py
version = "1.2.3"

[project.scripts]
createpythoncmd = "create_python_cmd.cli:main"
create-python-cmd = "create_python_cmd.cli:main"
